cleaned pages/api code and added controllers and utils wrapAsync for clean code and error handling made text more readable with same colors probably needs more fixes

--- a/styles/elper.module.scss
+++ b/styles/elper.module.scss
@@ -45,7 +45,8 @@
 }
 .description {
 	display: block;
-	color: rgba(110, 112, 114, 1);
+	color: #555759;
+	font-size: 16.4px;
 	height: 21vh;
 }
 
@@ -64,7 +65,7 @@
 
 .muted {
 	font-weight: 600;
-	color: #696f78;
+	color: #474b52;
 	display: block;
 	width: 100%;
 	border-bottom: 2.95px solid rgba(0, 0, 0, 0.2);
